<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irobot</name>
  <version>3.0.0</version>
  <description>Customized metapackage for iRobot(R) Create(R) platform</description>
  <maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>irobot_create_nodes</depend>
  <depend>irobot_create_msgs</depend>
  <depend>irobot_create_description</depend>
  <depend>irobot_create_common_bringup</depend>
  <depend>irobot_create_control</depend>
  <depend>irobot_create_gz_bringup</depend>
  <depend>irobot_create_gz_plugins</depend>
  <depend>irobot_create_gz_sim</depend>
  <depend>irobot_create_gz_toolbox</depend>
  <depend>irobot_create_toolbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
